--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ header{
     transition: all 0.50s ease;
 }
 .logo{
-    font: 36px;
+    font-size: 25px;
     color: var(--text-color);
     font-weight: 600;
 }
@@ -65,11 +65,77 @@ span{
     z-index: 10001;
     cursor: pointer;
     display: none;
-    
+}
+.h-btn{
+    display: inline-block;
+    padding: 12px 26px;
+    background: transparent;
+    color: var(--main-color);
+    border: 2px solid var(--main-color);
+    border-radius: 5px;
+    font-size: 15px;
+    font-weight: 500;
+    transition: all 0.5s ease;
 }
 
+.h-btn:hover{
+    background: var(--main-color);
+    color: var(--bg-color);
+    text-shadow:var(--main-color);
+    text-shadow: 2px 2px 10px var(--main-color), -2px 1px 30px var(--text-color);
+    transform: scale(1.1);
+}
+section{
+    padding: 110px 16% 90px;
+}
+.hero{
+    height: 100vh;
+    width: 100%;
+    background: url(dev\ boy.jpg);
+    background-size:cover;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+.main-content h4{
+    font-size: 1.6rem;
 
+}
+.main-content h1{
+    font-size: var(--h1-font);
+    font-weight: 900;
+    margin: 20px 0 20px;
+    line-height: 1.2;
+}
+.main-content h1{
+    font-size: var(--p-font);
+    font-weight: 400;
+    width: 620px;
+    max-width:100% ;
+    color: var(--other-color);
+    line-height: 30px;
+    margin-bottom: 15px;
 
+}
+.social{
+    margin-bottom: 40px;
+
+}
+.social i{
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    color: var(--main-color);
+    border-radius: 50%;
+    backdrop-filter: brightness(88%);
+    font-size: 20px;
+    margin-right: 17px;
+    box-shadow: 0 0 20px transparent;
+    cursor: pointer;
+    transition: all 0.50s ease;
+}
 
 
 
