--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-*{
+* {
     padding: 0;
-    margin:0;
+    margin: 0;
     box-sizing: border-box;
     font-family: 'Inter', sans-serif;
     text-decoration: none;
@@ -8,12 +8,12 @@
     scroll-behavior: smooth;
 }
 
-:root{
+:root {
     --text-color: #fff;
-    --bg-color:#1b1f24;
-    --second-background:#22282f;
-    --main-color:#13bbff;
-    --other-color:#c3cad5;
+    --bg-color: #1b1f24;
+    --second-background: #22282f;
+    --main-color: #13bbff;
+    --other-color: #c3cad5;
 
 
     --h1-font: 4.5rem;
@@ -21,11 +21,12 @@
     --p-font: 1rem;
 }
 
-body{
+body {
     color: var(--text-color);
     background: var(--bg-color);
 }
-header{
+
+header {
     position: fixed;
     width: 100%;
     top: 0;
@@ -38,35 +39,42 @@ header{
     background: transparent;
     transition: all 0.50s ease;
 }
-.logo{
+
+.logo {
     font-size: 25px;
     color: var(--text-color);
     font-weight: 600;
 }
-span{
+
+span {
     color: var(--main-color);
 }
-.navlist{
+
+.navlist {
     display: flex;
 }
-.navlist a{
+
+.navlist a {
     font-size: var(--p-font);
     font-weight: 500;
     color: var(--other-color);
     margin-left: 40px;
     transition: all 0.50s ease;
 }
-.navlist a:hover{
+
+.navlist a:hover {
     color: var(--main-color);
     text-shadow: 3px 3px 20px var(--main-color), -2px 1px 30px var(--text-color);
 }
-#menu-icon{
+
+#menu-icon {
     font-size: 35px;
     z-index: 10001;
     cursor: pointer;
     display: none;
 }
-.h-btn{
+
+.h-btn {
     display: inline-block;
     padding: 12px 26px;
     background: transparent;
@@ -78,50 +86,57 @@ span{
     transition: all 0.5s ease;
 }
 
-.h-btn:hover{
+.h-btn:hover {
     background: var(--main-color);
     color: var(--bg-color);
-    text-shadow:var(--main-color);
-    text-shadow: 2px 2px 10px var(--main-color), -2px 1px 30px var(--text-color);
-    transform: scale(1.1);
+    box-shadow: 0 0 20px var(--main-color);
+
 }
-section{
-    padding: 110px 16% 90px;
+
+section {
+    padding: 100px 16% 100px;
 }
-.hero{
+
+.hero {
     height: 100vh;
     width: 100%;
     background: url(dev\ boy.jpg);
-    background-size:cover;
+    background-size: cover;
     display: flex;
     align-items: center;
     justify-content: flex-start;
 }
-.main-content h4{
+
+.main-content h1 {
     font-size: 1.6rem;
 
 }
-.main-content h1{
+
+.main-content h1 {
     font-size: var(--h1-font);
-    font-weight: 900;
+    font-weight: 700;
     margin: 20px 0 20px;
     line-height: 1.2;
 }
-.main-content h1{
+
+.main-content h4 {
     font-size: var(--p-font);
-    font-weight: 400;
+    font-weight: 500;
     width: 620px;
-    max-width:100% ;
+    max-width: 100%;
     color: var(--other-color);
-    line-height: 30px;
+    line-height: 20px;
     margin-bottom: 15px;
 
 }
-.social{
+
+.social {
     margin-bottom: 40px;
+    padding: 10px;
 
 }
-.social i{
+
+.social i {
     display: inline-flex;
     align-items: center;
     justify-content: center;
@@ -137,9 +152,77 @@ section{
     transition: all 0.50s ease;
 }
 
+.social i:hover {
+    transform: scale(1.1);
+    box-shadow: 0 0 20px var(--main-color);
+}
 
-
-
-
-
+.btn{
+    display :inline-block;
+    padding: 11px 15px;
+    background: var(--main-color);
+    color: var(--bg-color);
+    border: 2px solid var(--main-color);
+    border-radius: 5px;
+    font-size: 15px;
+    font-weight: 600;
+    transition: all .50s ease;
+}
+.btn:hover{
+    background: transparent;
+    color: var(--main-color);
+    box-shadow: 0 0 20px var(--main-color);
+}
+.btn2{
+    background: transparent;
+    color: var(--main-color);
+    border-radius: 5px;
+    border :2px solid var(--main-color);
+    margin-left: 10px;
+    transition: all .50s ease;
+}
+.btn2:hover{
+    background: var(--main-color);
+    color: var(--bg-color);
+}
+header.sticky{
+    background: var(--bg-color);
+    box-shadow: 0 .1rem 1rem rgb(0, 0, 0, .2);
+    padding: 16px 16%;
+}
+.about{
+    background: var(--second-background);
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    align-items: center;
+    gap: 4rem;
+}
+.about-img img{
+    width: 500px;
+    height: 530px;
+    max-width: 530px;
+    border-radius: 250px;
+    object-fit: cover;
+    border: 6px solid var(--main-color);
+}
+.about-text h2{
+    font-size: var(--h2-font);
+    line-height: 1.3;
+    margin:20px;
+}
+.exp-area{
+    margin-bottom: 50px;
+}
+.exp-area p{
+    color: var(--main-color);
+    font-weight: 600;
+    font-size:var(--p-font);
+    line-height: 45px;
+}
+.exp-area p span{
+    color: var(--other-color);
+    font-weight: 400;
+    font-size: var(--p-font);
+    margin-left: 8px;
+}
 
